<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReminders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="137dp"
        android:layout_height="128dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="40px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivComputer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="137dp"
        android:layout_height="128dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="40px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="153dp"
        android:layout_height="52dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="9dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ivPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="77dp"
        android:layout_height="47dp"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="390dp"
        android:text="@string/versus"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="304dp"
        android:text="You"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvComputer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="121dp"
        android:layout_height="41dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        android:text="Computer"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPlayer"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="105dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="342dp"
        android:layout_height="33dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="83dp"
        android:text="@string/intro"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvStatisticsIntro"
        android:layout_width="229dp"
        android:layout_height="28dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="43dp"
        android:text="@string/statisticsIntro"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

</androidx.constraintlayout.widget.ConstraintLayout>